samples/_failures_safe/1761791489_bbaac5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_67bbc28e.c: In function ‘main’:
./samples/SAFE/__tmp_67bbc28e.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
